--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -28,31 +28,16 @@ jobs:
           user: PaulSpoerry
           template: classic
           base: header, activity, community, repositories, metadata
+          config_octicon: yes
           config_timezone: America/Chicago
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
-          plugin_calendar: yes
-          plugin_calendar_limit: 1
           plugin_fortune: yes
           plugin_habits: yes
-          plugin_habits_charts_type: classic
-          plugin_habits_days: 14
+          plugin_habits_charts: yes
+          plugin_habits_charts_type: chartist
+          plugin_habits_days: 60
           plugin_habits_facts: yes
           plugin_habits_from: 200
           plugin_habits_languages_limit: 8
           plugin_habits_languages_threshold: 0%
           plugin_introduction: yes
           plugin_introduction_title: yes
-          plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_analysis_timeout_repositories: 7.5
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%
