--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -28,8 +28,12 @@ jobs:
           user: PaulSpoerry
           template: classic
           base: header, activity, community, repositories, metadata
+          base_indepth: yes
+          commits_authoring: .user.login, github@paulspoerry.com, pspoerry@doctorssupplementstore.com, paul@paulspoerry.com, PaulSpoerry
           config_octicon: yes
           config_timezone: America/Chicago
+          plugin_calendar: yes
+          plugin_calendar_limit: 1
           plugin_fortune: yes
           plugin_habits: yes
           plugin_habits_charts: yes
@@ -41,3 +45,20 @@ jobs:
           plugin_habits_languages_threshold: 0%
           plugin_introduction: yes
           plugin_introduction_title: yes
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_indepth: yes
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: icons
+          plugin_topics_sort: stars
+          repositories_affiliations: owner, member
