--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,16 +29,15 @@ jobs:
           template: classic
           base: header, activity, community, repositories, metadata
           base_indepth: yes
-          commits_authoring: .user.login, github@paulspoerry.com, pspoerry@doctorssupplementstore.com, paul@paulspoerry.com, PaulSpoerry
+          commits_authoring: .user.login, github@paulspoerry.com, pspoerry@doctorssupplementstore.com, paul@paulspoerry.com, PaulSpoerry, PaulDSS
+          config_display: columns
           config_octicon: yes
           config_timezone: America/Chicago
-          plugin_calendar: yes
-          plugin_calendar_limit: 1
           plugin_fortune: yes
           plugin_habits: yes
           plugin_habits_charts: yes
           plugin_habits_charts_type: chartist
-          plugin_habits_days: 60
+          plugin_habits_days: 365
           plugin_habits_facts: yes
           plugin_habits_from: 200
           plugin_habits_languages_limit: 8
@@ -60,5 +59,5 @@ jobs:
           plugin_topics: yes
           plugin_topics_limit: 15
           plugin_topics_mode: icons
-          plugin_topics_sort: stars
+          plugin_topics_sort: starred
           repositories_affiliations: owner, member
